Remove unsafe cast in Game